--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Penguin Fashion</title>
 </head>
-<body>
+<body class="bg-by">
     <!-- header component -->
     <header class="bg-header">
         <!-- navbar component -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light py-3">
+            <div class="container-sm">
                 <div class="navbar-brand">
-                    <img width="290px" src="./images/logo.png" alt="logo">
+                    <img id="brand-logo" src="./images/logo.png" alt="logo">
                 </div>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -38,11 +38,11 @@
         </nav>
 
         <!-- banner component -->
-        <section class="p-5">
-            <div class="container">
+        <section class="p-2">
+            <div class="container-sm">
                 <div class="d-sm-flex align-items-center justify-content-between">
                     <div class="p-md-5 mb-5">
-                        <h1><span class="text-warning">BE THE PENGUINS</span> <br> OF WINTER</h1>
+                        <h1 class="mb-4"><span class="text-warning">BE THE PENGUINS</span> <br> OF WINTER</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Quam porro sequi, ipsam laudantium consequuntur architecto.</p>
                         <button class="btn btn-greeny text-white"><i class="bi bi-cart-fill"></i> BUY NOW</button>
                     </div>
@@ -53,6 +53,158 @@
             </div>
         </section>
     </header>
+
+    <!-- main component -->
+    <main>
+        <!-- women product component -->
+        <section class="p-2">
+            <div class="container-sm">
+                <h2 class="mb-4">WOEMEN JACKET</h2>
+                <div>
+                    <div class="row">
+                        <div class="col-lg-4 col-md-6">
+                            <div class="shadow-sm p-3 mb-5 bg-body border-radius">
+                                <div class="p-3 bg-light border-radius">
+                                    <img src="./images/jacket-1.png" class="img-fluid" alt="jacket">
+                                </div>
+                                <div class="card-body px-0">
+                                    <h3 class="card-title">Yellow Coat Jacket</h3>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, tenetur!</p>
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <h4 class="text-warning">$235</h4>
+                                        <button class="btn btn-greeny text-white"><i class="bi bi-cart-fill"></i> BUY NOW</button>
+                                    </div>
+                                </div>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <div class="shadow-sm p-3 mb-5 bg-body border-radius">
+                                <div class="p-3 bg-light border-radius">
+                                    <img src="./images/jacket-2.png" class="img-fluid" alt="jacket">
+                                </div>
+                                <div class="card-body px-0">
+                                    <h3 class="card-title">Ladies Jacket</h3>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, tenetur!</p>
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <h4 class="text-warning">$235</h4>
+                                        <button class="btn btn-greeny text-white"><i class="bi bi-cart-fill"></i> BUY NOW</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <div class="shadow-sm p-3 mb-5 bg-body border-radius">
+                                <div class="p-3 bg-light border-radius">
+                                    <img src="./images/jacket-3.png" class="img-fluid" alt="jacket">
+                                </div>
+                                <div class="card-body px-0">
+                                    <h3 class="card-title">Woman Leather Jacket</h3>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, tenetur!</p>
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <h4 class="text-warning">$235</h4>
+                                        <button class="btn btn-greeny text-white"><i class="bi bi-cart-fill"></i> BUY NOW</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- man product component -->
+        <section class="p-2">
+            <div class="container-sm">
+                <h2 class="mb-4">MAN JACKET</h2>
+                <div>
+                    <div class="row">
+                        <div class="col-lg-4 col-md-6">
+                            <div class="shadow-sm p-3 mb-5 bg-body border-radius">
+                                <div class="p-3 bg-light border-radius">
+                                    <img src="./images/jacket-4.png" class="img-fluid" alt="jacket">
+                                </div>
+                                <div class="card-body px-0">
+                                    <h3 class="card-title">Snowboard Jacket</h3>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, tenetur!</p>
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <h4 class="text-warning">$235</h4>
+                                        <button class="btn btn-greeny text-white"><i class="bi bi-cart-fill"></i> BUY NOW</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <div class="shadow-sm p-3 mb-5 bg-body border-radius">
+                                <div class="p-3 bg-light border-radius">
+                                    <img src="./images/jacket-5.png" class="img-fluid" alt="jacket">
+                                </div>
+                                <div class="card-body px-0">
+                                    <h3 class="card-title">Man Leather Jackets</h3>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, tenetur!</p>
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <h4 class="text-warning">$235</h4>
+                                        <button class="btn btn-greeny text-white"><i class="bi bi-cart-fill"></i> BUY NOW</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <div class="shadow-sm p-3 mb-5 bg-body border-radius">
+                                <div class="p-3 bg-light border-radius">
+                                    <img src="./images/jacket-6.png" class="img-fluid" alt="jacket">
+                                </div>
+                                <div class="card-body px-0">
+                                    <h3 class="card-title">Man Casual Jackets</h3>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, tenetur!</p>
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <h4 class="text-warning">$235</h4>
+                                        <button class="btn btn-greeny text-white"><i class="bi bi-cart-fill"></i> BUY NOW</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- service component -->
+        <section class="p-2">
+            <div class="container-sm">
+                <div class="d-lg-flex align-items-center justify-content-between">
+                    <div>
+                        <div class="d-flex align-items-center shadow-sm p-2 mb-3 bg-body border-radius">
+                            <img width="75px" src="./icons/image 12.png" alt="icon">
+                            <div class="ms-2">
+                                <h4>Find the Perfect Fit</h4>
+                                <p class="mb-0">Everybody is different, which is why we
+                                offer styles for every body.</p>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center shadow-sm p-2 mb-3 bg-body border-radius">
+                            <img width="75px" src="./icons/image 13.png" alt="icon">
+                            <div class="ms-2">
+                                <h4>Find the Perfect Fit</h4>
+                                <p class="mb-0">Everybody is different, which is why we
+                                offer styles for every body.</p>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center shadow-sm p-2 mb-3 bg-body border-radius">
+                            <img width="75px" src="./icons/image 14.png" alt="icon">
+                            <div class="ms-2">
+                                <h4>Find the Perfect Fit</h4>
+                                <p class="mb-0">Everybody is different, which is why we
+                                offer styles for every body.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center my-5">
+                        <img  class="img-fluid img-svg" src="./images/shopping.png" alt="shopping">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- bootstrap script cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
