--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- main component -->
     <main>
         <!-- women product component -->
-        <section class="p-2">
+        <section class="p-2 mt-4">
             <div class="container-sm">
                 <h2 class="mb-4">WOEMEN JACKET</h2>
                 <div>
@@ -113,7 +113,7 @@
         </section>
 
         <!-- man product component -->
-        <section class="p-2">
+        <section class="p-2 mt-4">
             <div class="container-sm">
                 <h2 class="mb-4">MAN JACKET</h2>
                 <div>
